# annealing_rust

./: Cargo.toml  README.md
src/: baseline_solver.rs  cli.rs  lib.rs  main.rs
src/annealing/: algorithm.rs  mod.rs  pools.rs
src/boundary/: baseline.rs
src/domain/: eth.rs  mod.rs
src/model/: mod.rs
src/util/: conv.rs  mod.rs  tycho.rs
test_data/: normalized_prices.json
test_data/ebbo/: ebbo_orders.json  ebbo_pools.json  ebbo_prices.json
test_data/inputs/: auction_10000002_liquidity.json  auction_10000002_orders.json  auction_10000002_tokens.json  auction_10000004_liquidity.json  auction_10000004_orders.json  auction_10000010_liquidity.json  auction_10000010_orders.json  auction_10000012_liquidity.json  auction_10000012_orders.json  auction_10000012_tokens.json  auction_10000015_liquidity.json  auction_10000015_orders.json  auction_10000018_liquidity.json  auction_10000018_orders.json  auction_10000018_tokens.json  auction_10000020_liquidity.json  auction_10000020_orders.json  auction_10000020_tokens.json  auction_10000023_liquidity.json  auction_10000023_orders.json  auction_10000024_liquidity.json  auction_10000024_orders.json  auction_10000025_liquidity.json  auction_10000025_tokens.json  auction_10000026_liquidity.json  auction_10000026_orders.json  auction_10000031_liquidity.json  auction_10000031_orders.json  auction_10000031_tokens.json  auction_10000032_liquidity.json  auction_10000032_orders.json  auction_10000032_tokens.json  auction_10000035_liquidity.json  auction_10000035_orders.json  auction_10000035_tokens.json  auction_10000041_liquidity.json  (+394 more)
(+10 files in other folders)
