[package]
name = "annealing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
anyhow = "=1.0.76"
derive_more = "0.99.17"
clap = { version = "4.5.1", features = ["derive"] }

# Ethereum related
ethcontract = "0.25.7"
ethereum-types = "0.14.1"
num = "0.4.3"  # For hex/decimal serialization
alloy = { version = "0.9", features = ["full"] }

# Utility crates
itertools = "0.12.1"
lazy_static = "1.4.0"
num-bigint = "0.4.6"
hex = { version = "0.4.3", default-features = false }
primitive-types = { version = "0.12", features = ["serde"] }
bigdecimal = "0.4"

# Custom dependencies seen in imports
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.85.1" }
